# 2026TI-kft

./: .gitattributes  .gitignore  QUICKSTART.md  README.md  STRUCTURE.md  dev.ps1  pyproject.toml  requirements-convert.txt
configs/: classify_sample.yaml  coco128.yaml  coco_pose.yaml  coco_seg.yaml  obb_sample.yaml
data/: .gitkeep
docs/: base_tasks_training_and_deploy.md  canaan_k230_official_guide.md  dotnet_and_web_streaming.md  environment_verification.md  k230_deploy.md  models_overview.md  official_sources_and_config_basis.md  self_training.md
scripts/: _device.py  export_onnx.py  infer.py  track.py  train_classify.py  train_detect.py  train_obb.py  train_pose.py  train_segment.py
templates/: canmv_k230_demo.py  canmv_k230_web_streamer.py  k230_cpp_runner.sh
tools/: audit_workspace.py  generate_deploy_pack.py  nncase_kpu-2.11.0-py2.py3-none-win_amd64.whl  to_kmodel.py  verify_env.py
weights/: .gitkeep
